--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.6.11",
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.0.6",
+    "appwrite": "^17.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
